@@ -64,9 +64,9 @@
     }
 
     function grep(pattern, iterator, context) {
-      if (!pattern) this.toArray();
+      if (!pattern || Object.isRegExp(pattern) &&
+         !pattern.source) this.toArray();
       iterator = iterator || K;
-
       var results = [], index = 0;
       if (typeof pattern === 'string')
         pattern = new RegExp(RegExp.escape(pattern));
