@@ -1,3 +1,5 @@
+* Make Array#grep and Enumerable#grep exit early if the regexp pattern is empty. [jddalton]
+
 * Optimize Hash methods by replacing calls to "each" with for-in loops as well as change Hash aliases. [#539 state:resolved] [Brad Avogel, jddalton, Romain Dorgueil]
   Note: Backwards compatibility warning.
    - Hash#index is alias of Hash#keyOf
